2023-10-22 jao <jao@gnu.org>
	Support for notmuch mua.
	* lisp/bbdb-notmuch.el: New file with auxiliary functions.
	* lisp/bbdb.el (bbdb-init-functions): Register notmuch.
	* lisp/bbdb-mua.el (bbdb-message-header, bbdb-mua-update-records)
	(bbdb-mua-wrapper): Use the functions in bbdb-notmuch.el.
	* lisp/Makefile.am, lisp/makefile-temp: Declare bbdb-notmuch.
	* configure.ac, m4/emacs_notmuch: New EMACS_NOTMUCH macro to
	declare notmuch's installation directory.

2023-10-22  Roland Winkler  <winkler@gnu.org>
	Silence the compiler.
	* lisp/bbdb.el (bbdb-message-headers): Spell out :type.
	(bbdb-display-record-one-line): Use delete-char.

2023-10-22  Roland Winkler  <winkler@gnu.org>
	Improve snarfing vCards.
	* lisp/bbdb-snarf.el: Require qp.
	(bbdb-snarf-vcard-adr-type-re, bbdb-snarf-vcard-tel-type-re): New
	user variables.
	(bbdb-snarf-vcard-property): Handle encoded vCard properties.
	(bbdb-snarf-assoc): New function.
	(bbdb-snarf-vcard-adr, bbdb-snarf-vcard-tel): Use it.

2022-07-05  Arash Esbati <arash@gnu.org>
	Silence the compiler.
	* lisp/bbdb.el, lisp/bbdb-com.el: Fix unescaped single quotes in
	docstrings.

2022-04-15  Roland Winkler  <winkler@gnu.org>
	Bug fix.  New optional arg ident for bbdb-edit-field.
	* lisp/bbdb-com.el (bbdb-edit-field, bbdb-read-name)
	(bbdb-read-xfield, bbdb-read-organization)
	(bbdb-record-edit-address, bbdb-edit-address-street)
	(bbdb-record-edit-phone): New optional arg ident.
	* lisp/bbdb-com.el (bbdb-mua-edit-field): Use it.
	(bbdb-annotate-message): Bug fix.
	* lisp/bbdb.el, configure.ac: Increase version number to 3.2.2b.

2022-03-28  Roland Winkler  <winkler@gnu.org>
	Increase version number to 3.2.2a.
	* lisp/bbdb.el, configure.ac: Increase version number to 3.2.2a.
	* NEWS: Updated.

2022-03-27  Roland Winkler  <winkler@gnu.org>
	* lisp/bbdb-mua.el (bbdb-message-header): Fix previous patch.

2022-03-26  Roland Winkler  <winkler@gnu.org>
	Support snarfing vCards.
	* lisp/bbdb.el (bbdb-utilities-vcard): New custom group.